menifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cac-platform
  namespace: eternal
spec:
  replicas: 1 # Number of replicas you want to deploy
  selector:
    matchLabels:
      app: cac-platform
  template:
    metadata:
      labels:
        app: cac-platform
    spec:
      containers:
        - name: cac-platform
          image: 501485087463.dkr.ecr.us-east-1.amazonaws.com/platformui:v12
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # Port that your React app is running on
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 50m
              memory: 50Mi
